fix: deleting swagger files

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 */static/ckeditor
 */static/rest_framework
 */static/streamfield
+*/static/drf-yasg
 /__pycache__
 src/src_config/__pycache__/*.pyc
 .DS_Store
